templates/modern/css/pdf.css
body.pdf {
    color: black;

    .container {
        width: 1000px;          /* with sufficient font size, fit into 2 pages */
        margin: 0 auto;
        padding: 0;
        background: #fff;
        border: none;
        border-width: 8px 0 2px 0;
        text-align: left;
        font-size: 115%;        /* scale all text size */
    }

    .resume {
        position:relative;
        padding: 40px 80px;
    }

    a {
        text-decoration: none;
        color: black;
    }

    a[href$='.pdf'] {
        display: none;
    }

    blockquote {
        top: 40px;
        right: 50px;
        position: absolute;
    }

    h1 {
        letter-spacing: 0;
        margin-top: 0;
        font-size: 48px;
        text-transform: uppercase;
        font-weight: normal;
    }
    
    h2 {
        letter-spacing: 0;
        text-transform: uppercase;
        font-style: italic;
        font-weight: normal;
        padding-bottom: .2em;    /*reduce since 'Download PDF' no longer present*/
    }
    
    h3 {
        float: left;
        width: 16%;
        font-style: normal;
    }
    
    h3+p {
        float: left;
        width: 78%;
    }

    h3+ul {
        width: 666px;           /*666 px max before become unaligned*/
        text-align: left;
        text-justify: none;

        li {
            float: left;        /*side-by-side alignment falls apart without this*/
            margin: 0;
            padding: 0;
        }
        
        dl {
            
            dt {
                font-size: 110%;
                font-weight: normal;
                margin: 0 0 .75em;
            }
            dd {
                padding: 0 0 0 0;
                font-size: .75em;
            }
        }
    }

    h4 {
        margin: 1.4em 0 0 21%;
    }

    h4+ul {
        margin: -0.4em 0 0 21%;
    }

    ol {
        float: left;
        width: 79%;
        margin: .7em 0 0;
    }

    ol li {
        width: 33%;
        margin: 0;
    }
    ol li:nth-child(3n) {
        width: 34%;
    }
    ol li:nth-child(1), ol li:nth-child(2), ol li:nth-child(3) {
        border-top: none;
    }

    dl {
        margin: .7em 0 0;
        page-break-inside: auto; /* used to be: avoid !important */
        display: block;
        width:79%;
        float: left;
        dt {
            page-break-inside: avoid !important;
            page-break-after: avoid !important; /* avoid, but not for sure */
        }
        dd {
            page-break-inside: avoid !important;
            page-break-before: avoid !important;
        }
        strong {
            float: right;
            margin-top: -2em;
        }
        em {
            font-size: 130%;
            font-style: normal;
        }

    }

    table {
        margin: .2em 0em .5em 21%;
    }

    div.footer {
        display: none;          /* hide the footer since can't print on every page*/
    }

    div.personalstatement {
        /* only the widths of h3 and h3+p were redefined, so set them back */
        h3 {
            width: 100%;
             }

        p {
            width: 100%;
        }
    }
}

